test con methods e created per richiamarlo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <div class="title">
                     <h1>Random mail generator</h1>
                 </div>
+                <div class="mail-gen">
+                    <p> {{  }} </p>
+                </div>
             </section>
         </main>
     </div>
