errore di sintassi risolto, codice funzionante

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <h1>Random mail generator</h1>
                 </div>
                 <div class="mail-gen">
-                    <p> {{  }} </p>
+                    <p> {{ email }} </p>
                 </div>
             </section>
         </main>
