problema del ciclo for risolto aggiungendo un array + cambiando a riga15 ed aggiungendo un push. esercizio completato

--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
                     <h1>Random mail generator</h1>
                 </div>
                 <div class="mail-gen">
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
-                    <p> {{ email }} </p>
+                    <p v-for="(email, index) in emails" :key="index"> {{ email }} </p>
                 </div>
             </section>
         </main>
